# guitar

./: AUTHORS  BUGS  ChangeLog  HPUX.Install  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  config.h  config.h.in  config.status  configure  configure.in  guiTAR-0.1.4.lsm  guiTAR.desktop  guiTAR.pot  guitar.1  install.gnome
src/: Makefile  Makefile.am  Makefile.in  common.h  dnd.c  dnd.h  gladesrc.c  gladesrc.h  guiTAR.xpm  icon.xpm  logo.xpm  main.c  main.h  menu.c  menu.h  programs.c  programs.h
src/gtkmyfilesel/: Makefile  Makefile.am  Makefile.in  fnmatch.c  fnmatch.h  gtkembedfilesel.c  gtkembedfilesel.h  gtkmyfilesel.c  gtkmyfilesel.h
